--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
-    "sass": "^1.56.1"
+    "sass": "^1.56.1",
+    "json5": "^2.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.7"
+    "vite": "^3.2.7",
+    "json5": "^2.2.2"
   }
 }
+
